<resources>
    <string name="app_name">JaguarNet</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="amount">Amount</string>
    <string name="amount_liqr">Amount Liqr</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bus">BUS</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">close</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="dashboard">Dashboard</string>
    <string name="datacard">Datacard</string>
    <string name="date">Date</string>
    <string name="default_web_client_id">257804771469-p2tgh5vsbjsku1j9cle45aiqdf9bti1q.apps.googleusercontent.com</string>
    <string name="deposit">Deposit</string>
    <string name="dth">DTH</string>
    <string name="electricity">Electricity</string>
    <string name="email_address">Email Address</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="flight">Flight</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="fun_receive">Fund Received</string>
    <string name="gas">GAS</string>
    <string name="gcm_defaultSenderId">257804771469</string>
    <string name="google_api_key">AIzaSyCwg27UWaO0i_henLfnj973tPJ0qMwcmAI</string>
    <string name="google_app_id">1:257804771469:android:a93e83730b2bb14bd042c4</string>
    <string name="google_crash_reporting_api_key">AIzaSyCwg27UWaO0i_henLfnj973tPJ0qMwcmAI</string>
    <string name="google_storage_bucket">liqrcoin-aa8a5.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hotel_booking">Hotel</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="logout">Logout</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="next">Next</string>
    <string name="open">open</string>
    <string name="open_a_new_door_of_opportunities_with_new_well_designed_liqrcoin">Open a new door of opportunities with new well designed Liqrcoin</string>
    <string name="otp">OTP</string>
    <string name="passbook">Passbook</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="postpaid">Postpaid</string>
    <string name="prepaid">Prepaid</string>
    <string name="project_id">liqrcoin-aa8a5</string>
    <string name="recepient">Recepient</string>
    <string name="registration">Registration</string>
    <string name="scan">Scan</string>
    <string name="search_menu_title">Search</string>
    <string name="service_charge">Service Charge</string>
    <string name="sign_in">Sign In</string>
    <string name="sr_no">Sr.No.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="total_deduction">Total Deduction</string>
    <string name="total_liqr_0_0">Total Liqr = 0.0</string>
    <string name="upi">UPI</string>
    <string name="upi_id">UPI ID</string>
    <string name="water">Water</string>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="name">Name</string>
    <string name="jhon_smith">Jhon Smith</string>
    <string name="enter_upi_id">Enter UPI ID</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="description_optional">Description (optional)</string>
    <string name="enter_description">Enter Description</string>
    <string name="pay">Pay</string>
    <string name="bills_travel"><![CDATA[Bills & Travel]]></string>
    <string name="invalid_user_id_password">Invalid User Id/Password</string>
</resources>