<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".PaymentPage">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/payToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/txtErrorTrnx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="UPI Server Down"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/creditorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txtcreditorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/jhon_smith"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/upiIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="UPI ID*"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtUpiId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/enter_upi_id"
            android:inputType="none"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/amountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Amount*"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_amount"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="@color/white" />

<!--        <TextView-->
<!--            android:id="@+id/txtAmountAfterTax"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="5dp"-->
<!--            android:text="₹0 will be deduct from your wallet"-->
<!--            android:textAlignment="viewEnd"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="12sp" />-->

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description_optional"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_description"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/payButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:padding="10dp"
            android:text="@string/pay"
            android:textColor="@color/black" />

    </LinearLayout>
</LinearLayout>